# Arnold

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .importlinter  .megaplan-idea.md  .plan_v1.md  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FOUNDATION_05-auto-orchestration.md  Makefile  NEXT_STEPS.md  README.md  SKILL.md  _brief_variable_profiles.md  _diag.py  _diag_check.py  _edge.py  _fix_normalized.py  _fix_t6.py  _gen_corpus.py  _gen_golden_traces.py  _migrate_init.py  _migrate_pipeline.py  _northstar.py  _regen_templates.py  _regenerate_fixtures.py  _repro_rework.py  _repro_t8.py  _repro_t9.py  _smoke_trace_test.py  _t10_t15_smoke.py  _t14_batch_patch.py  _t14_block2_patch.py  _t15_ast_check.py  _throwaway_e2e_verify.py  (+110 more)
.megaplan/: STRATEGY.md  boundary-turn-epic-codex-brief.md  boundary-turn-epic-codex-response.md  boundary-turn-overlap-codex-brief.md  boundary-turn-overlap-codex-response.md  build_json.py  check-cloud-status.sh  cloud-chain-python-shaped-workflow-authoring.log.pre-kimi-fix.20260627T162549Z  debt.json  engine-accidental-native-diff-20260703T160813Z.patch  engine-accidental-native-diff-20260703T163010Z.patch  plan_v4.md  plan_v4_output.json  profiles.toml  recent-failure-pattern-analysis-task.md  relaunch-chain.sh  strategy.projection.json  t7_test_block.py  video-editor-cloud.yaml  video-editor-dx-chain-runbook.md  video-editor-dx-chain.yaml  video-editor-dx-sprint-01-idea.md  video-editor-dx-sprint-02-idea.md  video-editor-dx-sprint-03-idea.md  video-editor-dx-sprint-04-idea.md  video-editor-dx-sprint-05-idea.md  video-editor-dx-sprint-06-idea.md  video-editor-dx-sprint-07-idea.md  video-editor-dx-sprint-08-idea.md
agent-jury/: caps.json
agent_kit/: attachments.py  body.py  code_cache.py  code_redaction.py  end_of_turn.py  envelope.py  envelope.schema.json  epic_routing.py  gating.py  github_client.py  ledger.py  logging.py  loop.py  openai_ops.py  ports.py  prompts.py  resident.py  second_opinion.py  sprints.py  templates.py  tool_kit.py
agentbox/: __init__.py  __main__.py  adapters.py  bootstrap.py  cleanup.py  cli.py  completion.py  config.py  doctor.py  git_worktree.py  github.py  host.py  locks.py  notify.py  operation_resolver.py  operation_views.py  operations.py  reconcile.py  redaction.py  repos.py  reset_notifications.py  resident_profile.py  restart_supervisor.py  run_dirs.py  services.py  tmux.py  tmux_restart_worker.py  version.py  worktrees.py
agentic/: README.md  __init__.py  actors.py  adapter.py  runner.py
agents/: README.md  openai.yaml
arnold/: __init__.py  __main__.py  cli.py
arnold_pipelines/: discovery.py
arnold_sdk/: __init__.py
artifacts/: README.md  m1-step1-audit.md  m2-diff-hygiene.md  m2-symbol-map.md  m5_agent_edit_imports.txt  m5_baseline_red.txt  m6-public-api.md
briefs/: STATUS.md  cli-spec-model-override.md  critique-complexity-routing.md  critique-evaluator-adaptive-flag.md  cross-process-lifecycle-tmux-ownership.md  docs-accuracy-audit.md  epic-adversarial-review-sequence.md  execute-failure-tier-escalation.md  foundation-hardening-sprint.md  megaplan-decomposition.md  multi-agent-fanout-primitive.md  pipeline-unification-EPIC.md  pipeline-unification-planning-as-pack.md  pipeline-week1-cleanup.md  plan-all-first-epic-mode.md  planning-unification-FOUNDATION-AUDIT.md  prep-clarification-escape-hatch.md  prep-fanout-research-dossier.md  prep-profile-driven-vendor-agnostic.md  shannon-elegance.md  sprint-3-handoff.md  sprint-4-chunk-A.md  sprint-4-chunk-E.md  sprint-4-chunk-F.md  sprint-a-safety-substrate.md  sprint-b-serial-worktree-execute.md  subprocess-runtime-centralization.md  with-feedback.md
docs/: ._hetzner-watchdog-meta-loop.md  README.md  adding_templates_models.md  agent-edit-client-lifecycle.md  agent-edit-contracts.md  agent-edit-response-contract.md  agent-platform-polish-plan.md  agent-runtime-integration.md  agent_edit_concrete_tree.md  agent_edit_phase1_plan.md  agent_edit_solution_spec.md  agent_text_to_graph_mvp.md  agent_text_to_graph_python_loading_spike.md  agentbox-resident-boundary.md  anchors.md  api_stability.md  arnold-merge-design.md  authoring.md  auto-execute-boundary-diagnosis.md  briefs.md  canonical-vocabulary.md  characterization-gate.md  cloud-hot-upload.md  cloud-migration-from-reigh.md  cloud-prerequisite-resolution.md  cloud.md  comfy_version_support.md  comfyscript_spike.md  configuration.md  corpus_parity_allowlist.md  critique.md  custom_node_wrapper_codegen.md  custom_nodes.md  decorator_template_emitter_completion.md  e2e_real_browser_tier.md  elegant-arnold-megaplan-split-plan.md  epic-adversarial-review.md  epic-vetting-philosophy.md  errors_and_doctor.md  events.md  (+91 more)
evidence/: authority-reader-registry.json  controlled-writer-registry.json  finding-prevention-register.json  m6-inventory-bytecode-interface.json  m6-prerequisite-verification.json  m6-proof-index.json  m6a-f01-f17-substrate-map.json  m6a-prerequisite-resolution.json  m6a-schema-only-row-classification.json  m7-custody-bytecode-interface.json  m7-occurrence-writer-terminal-provenance-map.json  m8a-f01-f17-executor-wiring.json  m8a-report-only-corpus.json  m9-cutover-handoff.json  m9-f01-f17-consumer-cutover.json  m9-idle-canary-evidence.json  m9-joined-ledger-summary.json  m9-projection-digests.json  m9-reason-fixture-evidence.json  m9-reducer-cursor-comparison.json  m9-stress-metrics.json  migration-matrix-reconciled.json  ownership-decision-record.json  pc-scope-decision.json  rollout-deletion-register.json  wbc-boundary-discovery-rules.yaml  wbc-boundary-inventory-validation.json  wbc-boundary-inventory.json  wbc-historical-adapters.json  work-ledger-vocabulary.json
examples/: minimal_api.json  smoke_empty_image_black.json  smoke_empty_image_red.json  smoke_empty_image_white.json
ideas/: sprint-1a-agent-kit-core.md  sprint-1b-discord-resident.md  sprint-2a-editorial-core.md  sprint-2b-editorial-polish.md  sprint-3-multi-epic.md  sprint-4-sprint-mode.md  sprint-5-codebase-research.md  sprint-6-images-second-opinion.md  (+1 more)
megaplan/: auto.py  (+36 more)
(+23959 files in other folders)
