[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "megaplan-harness"
version = "0.23.0"
description = "AI agent harness for coordinating Claude and GPT to make and execute extremely robust plans"
requires-python = ">=3.11"
license = { text = "OSNL-0.2" }
authors = [
    { name = "Peter O'Malley" },
]
keywords = ["ai", "planning", "orchestration", "claude", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-ulid>=3.0",
    "psutil>=5.9",
    # --- Hermes/agent backend (core) ---------------------------------------
    # The hermes/agent runtime backs prep research, critique, fanout, and the
    # agentic phases. It is NOT optional: the canonical prep models route to
    # `hermes:deepseek:...` for every run, so a chain that does prep WILL import
    # this backend. Historically these lived in the `[agent]` optional extra
    # plus a `[tool.uv] default-extras = ["agent"]` hint, but some uv versions
    # silently ignore `default-extras`, producing a fresh install that imports
    # fine until prep iteration N fails with a confusing `agent_deps_missing`.
    # Moving them into core makes `pip install -e .` / `uv pip install -e .`
    # ALWAYS ship a working backend. (The `[agent]` extra below is kept as a
    # back-compat alias for callers that still reference it.)
    "openai",
    "anthropic>=0.39.0",
    "python-dotenv",
    "fire",
    "httpx",
    "rich",
    "requests",
    "prompt_toolkit",
    "firecrawl-py",
    "fal-client",
    "edge-tts",
    "faster-whisper>=1.0.0",
    "PyJWT[crypto]",
]

[project.optional-dependencies]
db = [
    "psycopg[binary]>=3.1",
]
# Back-compat alias: the agent backend's packages are now core dependencies
# (see [project].dependencies). This extra is retained so existing install
# commands / docs that say `pip install '.[agent]'` keep working as a no-op.
agent = []
[project.scripts]
megaplan = "megaplan.cli:cli_entry"

[tool.uv]
# The hermes/agent backend's packages are now core [project].dependencies, so a
# plain `uv pip install -e .` / `uv sync` always ships a working backend. We no
# longer rely on `default-extras` (some uv versions silently ignore it, which is
# what produced the confusing mid-prep `agent_deps_missing` failures).

[tool.hatch.build]
exclude = [
    "megaplan/cloud/_reference/**",
    "megaplan/agent/pyproject.toml",
    "megaplan/agent/auto_improve/iterations/**",
]

[tool.hatch.build.targets.wheel]
packages = ["megaplan"]
exclude = [
    "megaplan/cloud/_reference/**",
    "megaplan/agent/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "editorial_*.py"]
markers = [
    "asyncio: async tests, primarily for the vendored agent runtime",
    "integration: integration tests that may exercise external process boundaries",
    "slow: tests that require Docker or other external runtime dependencies",
]
